[tool.poetry]
name = "undead-players"
version = "0.1.0"
description = "Dead players will become zombies that protect the contents of the player's inventory."
authors = ["Lue <lue@lued.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Private :: Do Not Publish"
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
beet = "^0.35.1"
lectern = "^0.15.2"
lepsen_core = "^0.1.1"

[tool.beet]
output = "build"
extend = ["beet-project.yaml"]

[[tool.beet.pipeline]]
output = "build"
extend = ["beet-project.yaml"]
data_pack.zipped = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
