[tool.poetry]
name = "undead-players"
version = "0.1.1"
description = "Dead players will become zombies that protect the contents of the player's inventory."
authors = ["Lue <lue@lued.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Luexa/spectral-necrosis"
repository = "https://github.com/Luexa/spectral-necrosis"
classifiers = [
    "Private :: Do Not Publish"
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = { version = "^21.12b0", allow-prereleases = true }
beet = "^0.50.3"
lectern = "^0.18.2"
mecha = "^0.34.0"
lepsen_core = { version = "^0.2.0rc1", allow-prereleases = true }

[tool.beet]
output = "build"
extend = ["beet-project.yaml"]

[[tool.beet.pipeline]]
output = "build"
extend = ["beet-project.yaml"]
data_pack.zipped = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
